NavBar background fixes on Mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,8 +66,8 @@ body {
   background-repeat: no-repeat;
 }
 
-.navbar-default .navbar-collapse {
- background:#1C2134;
+.navbar-default .navbar-collapse.in {
+  background:#1C2134;
 }
 
 .navbar-default .navbar-toggle {
